; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_decl.c_nonstatic_local_decl_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_decl.c_nonstatic_local_decl_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LABEL_DECL = common dso_local global i64 0, align 8
@RESULT_DECL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nonstatic_local_decl_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @local_variable_p(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @TREE_STATIC(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %6, %1
  %11 = load i32, i32* %2, align 4
  %12 = call i64 @TREE_CODE(i32 %11)
  %13 = load i64, i64* @LABEL_DECL, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %20, label %15

15:                                               ; preds = %10
  %16 = load i32, i32* %2, align 4
  %17 = call i64 @TREE_CODE(i32 %16)
  %18 = load i64, i64* @RESULT_DECL, align 8
  %19 = icmp eq i64 %17, %18
  br label %20

20:                                               ; preds = %15, %10, %6
  %21 = phi i1 [ true, %10 ], [ true, %6 ], [ %19, %15 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}

declare dso_local i64 @local_variable_p(i32) #1

declare dso_local i32 @TREE_STATIC(i32) #1

declare dso_local i64 @TREE_CODE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
